made all of tony's changes to PTV, Selection Process; fixed spacing on bold italics; changed glyphicons

--- a/css/style2.css
+++ b/css/style2.css
@@ -157,3 +157,8 @@ h2 {
 #arrow {
   margin-top: 25%;
 }
+
+strong > i {
+  margin-right: 4px;
+}
+
